--- a/Projet/MyMusicPlayer/app/src/main/AndroidManifest.xml
+++ b/Projet/MyMusicPlayer/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jul.mymusicplayer">
+    package="com.MyMusicPlayer">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="false">
         <activity android:name=".MainActivity">
             android:launchMode="singleTop"
             <intent-filter>
@@ -21,10 +21,6 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".MusicPlayer"
-            android:enabled="true"
-            android:exported="true" />
     </application>
 
 </manifest>
